# quant-terminal-web

./: .env.example  .gitignore  README.md  package.json
backend/: pyproject.toml
backend/src/quant_terminal_api/: __init__.py  __main__.py  app.py  bot_state.py  config.py  dependencies.py  models.py
backend/src/quant_terminal_api/readers/: __init__.py  analysis.py  candle_aggregate.py  data.py  lakehouse.py  live_ticks.py  market.py
backend/src/quant_terminal_api/routes/: __init__.py  analysis.py  audit.py  bot.py  ecosystem.py  health.py  market.py  metrics.py  trades.py
backend/tests/: analysis_fixture.py  test_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuditFeed.tsx  BotControls.tsx  BotStatusBadge.tsx  CandlestickChart.tsx  CapitalPanel.tsx  ConfirmDialog.tsx  EquityChart.tsx  HelpTip.tsx  LoadingPanel.tsx  MetricsGrid.tsx  RecommendationPanel.tsx  SignalHistory.tsx  Toast.tsx  TopBar.tsx  TradesTable.tsx  TradingChart.tsx
frontend/src/types/: api.ts
frontend/src/utils/: chartData.ts  chartViewport.ts  format.ts  glossary.ts  humanize.ts
samples/: audit.db  audit_events.jsonl  build_audit_db.py  equity.json  metrics.json  trades.jsonl
scripts/: analysis_engine.py  bootstrap_market_data.py  ecosystem_tools.py  market_daemon.py  paper_bot_runner.py  run_ecosystem_pipeline.py  start_stack.sh  start_terminal.py  tick_bridge.py
