[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-terminal-api"
version = "0.1.0"
description = "FastAPI REST layer for the quant-terminal-web control dashboard."
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "juanmmm21" }]
keywords = ["fastapi", "trading", "dashboard", "quant", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "duckdb>=1.0,<2",
    "pytz>=2024.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
quant-terminal-api = "quant_terminal_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_terminal_api"]

[tool.hatch.build.targets.sdist]
include = ["src/quant_terminal_api", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
